// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`displays a credential offer screen renders correctly 1`] = `
Array [
  <RCTScrollView
    ListFooterComponent={[Function]}
    ListHeaderComponent={[Function]}
    data={
      Array [
        Object {
          "mime-type": "text/plain",
          "name": "name",
          "value": "Alice Smith",
        },
        Object {
          "mime-type": "text/plain",
          "name": "date",
          "value": "2018-05-28",
        },
        Object {
          "mime-type": "text/plain",
          "name": "degree",
          "value": "Maths",
        },
        Object {
          "mime-type": "text/plain",
          "name": "birthdate_dateint",
          "value": "19980222",
        },
        Object {
          "mime-type": "text/plain",
          "name": "timestamp",
          "value": "1645559742",
        },
      ]
    }
    getItem={[Function]}
    getItemCount={[Function]}
    keyExtractor={[Function]}
    onContentSizeChange={[Function]}
    onLayout={[Function]}
    onMomentumScrollBegin={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
    viewabilityConfigCallbackPairs={Array []}
  >
    <View>
      <View
        onLayout={[Function]}
      >
        <View
          style={
            Object {
              "backgroundColor": "#000000",
            }
          }
        >
          <View
            style={
              Object {
                "paddingHorizontal": 25,
                "paddingVertical": 16,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#FFFFFF",
                  "flexShrink": 1,
                  "fontSize": 18,
                  "fontWeight": "normal",
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#FFFFFF",
                      "fontSize": 20,
                      "fontWeight": "bold",
                    },
                    undefined,
                  ]
                }
              >
                faber.agent
              </Text>
               
              CredentialOffer.IsOfferingYouACredential
            </Text>
          </View>
          <View
            style={
              Object {
                "marginBottom": 16,
                "marginHorizontal": 15,
              }
            }
          >
            <View
              accessible={true}
              collapsable={false}
              focusable={true}
              nativeID="animatedComponent"
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "backgroundColor": "#313132",
                  "borderRadius": 15,
                  "justifyContent": "center",
                  "minHeight": 125,
                  "opacity": 1,
                  "padding": 10,
                }
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                  }
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "borderColor": "#FFFFFF",
                        "borderRadius": 32,
                        "borderWidth": 3,
                        "height": 64,
                        "justifyContent": "center",
                        "margin": 12,
                        "width": 64,
                      },
                      Object {
                        "borderColor": "#15C477",
                      },
                    ]
                  }
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#FFFFFF",
                          "fontSize": 20,
                          "fontWeight": "bold",
                        },
                        Object {
                          "color": "#FFFFFF",
                          "fontSize": 32,
                          "fontWeight": "normal",
                        },
                      ]
                    }
                  >
                    C
                  </Text>
                </View>
                <View
                  style={
                    Object {
                      "flexShrink": 1,
                    }
                  }
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#FFFFFF",
                          "fontSize": 20,
                          "fontWeight": "bold",
                        },
                        undefined,
                      ]
                    }
                  >
                    Credential
                  </Text>
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#FFFFFF",
                        },
                        undefined,
                      ]
                    }
                  >
                    CredentialDetails.Version
                    : 
                    
                  </Text>
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#FFFFFF",
                        },
                        undefined,
                      ]
                    }
                  >
                    CredentialDetails.Issued
                    :
                     
                    Feb 22, 2022 (11:55 AM)
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          style={
            Object {
              "backgroundColor": "#313132",
              "paddingHorizontal": 25,
              "paddingTop": 16,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#FFFFFF",
                "fontSize": 14,
                "fontWeight": "bold",
              }
            }
          >
            Name
          </Text>
          <View
            style={
              Object {
                "flexDirection": "row",
                "justifyContent": "space-between",
                "paddingTop": 10,
              }
            }
          >
            <View
              style={
                Object {
                  "minHeight": 18,
                  "paddingVertical": 4,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#FFFFFF",
                    "fontSize": 18,
                    "fontWeight": "normal",
                  }
                }
              >
                Alice Smith
              </Text>
            </View>
          </View>
          <View
            style={
              Object {
                "borderBottomColor": "#000000",
                "borderBottomWidth": 2,
                "paddingTop": 12,
              }
            }
          />
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          style={
            Object {
              "backgroundColor": "#313132",
              "paddingHorizontal": 25,
              "paddingTop": 16,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#FFFFFF",
                "fontSize": 14,
                "fontWeight": "bold",
              }
            }
          >
            Date
          </Text>
          <View
            style={
              Object {
                "flexDirection": "row",
                "justifyContent": "space-between",
                "paddingTop": 10,
              }
            }
          >
            <View
              style={
                Object {
                  "minHeight": 18,
                  "paddingVertical": 4,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#FFFFFF",
                    "fontSize": 18,
                    "fontWeight": "normal",
                  }
                }
              >
                2018-05-28
              </Text>
            </View>
          </View>
          <View
            style={
              Object {
                "borderBottomColor": "#000000",
                "borderBottomWidth": 2,
                "paddingTop": 12,
              }
            }
          />
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          style={
            Object {
              "backgroundColor": "#313132",
              "paddingHorizontal": 25,
              "paddingTop": 16,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#FFFFFF",
                "fontSize": 14,
                "fontWeight": "bold",
              }
            }
          >
            Degree
          </Text>
          <View
            style={
              Object {
                "flexDirection": "row",
                "justifyContent": "space-between",
                "paddingTop": 10,
              }
            }
          >
            <View
              style={
                Object {
                  "minHeight": 18,
                  "paddingVertical": 4,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#FFFFFF",
                    "fontSize": 18,
                    "fontWeight": "normal",
                  }
                }
              >
                Maths
              </Text>
            </View>
          </View>
          <View
            style={
              Object {
                "borderBottomColor": "#000000",
                "borderBottomWidth": 2,
                "paddingTop": 12,
              }
            }
          />
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          style={
            Object {
              "backgroundColor": "#313132",
              "paddingHorizontal": 25,
              "paddingTop": 16,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#FFFFFF",
                "fontSize": 14,
                "fontWeight": "bold",
              }
            }
          >
            Birthdate Dateint
          </Text>
          <View
            style={
              Object {
                "flexDirection": "row",
                "justifyContent": "space-between",
                "paddingTop": 10,
              }
            }
          >
            <View
              style={
                Object {
                  "minHeight": 18,
                  "paddingVertical": 4,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#FFFFFF",
                    "fontSize": 18,
                    "fontWeight": "normal",
                  }
                }
              >
                19980222
              </Text>
            </View>
          </View>
          <View
            style={
              Object {
                "borderBottomColor": "#000000",
                "borderBottomWidth": 2,
                "paddingTop": 12,
              }
            }
          />
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          style={
            Object {
              "backgroundColor": "#313132",
              "paddingHorizontal": 25,
              "paddingTop": 16,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#FFFFFF",
                "fontSize": 14,
                "fontWeight": "bold",
              }
            }
          >
            Timestamp
          </Text>
          <View
            style={
              Object {
                "flexDirection": "row",
                "justifyContent": "space-between",
                "paddingTop": 10,
              }
            }
          >
            <View
              style={
                Object {
                  "minHeight": 18,
                  "paddingVertical": 4,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#FFFFFF",
                    "fontSize": 18,
                    "fontWeight": "normal",
                  }
                }
              >
                1645559742
              </Text>
            </View>
          </View>
          <View
            style={
              Object {
                "borderBottomColor": "#000000",
                "borderBottomWidth": 2,
                "paddingTop": 12,
              }
            }
          />
        </View>
      </View>
      <View
        onLayout={[Function]}
      >
        <View
          style={
            Object {
              "backgroundColor": "#313132",
              "height": "100%",
              "paddingHorizontal": 25,
              "paddingVertical": 16,
            }
          }
        >
          <View
            style={
              Object {
                "paddingTop": 10,
              }
            }
          >
            <View
              accessibilityState={
                Object {
                  "disabled": false,
                }
              }
              accessible={false}
              collapsable={false}
              focusable={true}
              nativeID="animatedComponent"
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "backgroundColor": "#35823F",
                  "borderRadius": 4,
                  "opacity": 1,
                  "padding": 16,
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#FFFFFF",
                      "fontSize": 18,
                      "fontWeight": "bold",
                      "textAlign": "center",
                    },
                    false,
                  ]
                }
              >
                Global.Accept
              </Text>
            </View>
          </View>
          <View
            style={
              Object {
                "paddingTop": 10,
              }
            }
          >
            <View
              accessibilityState={
                Object {
                  "disabled": false,
                }
              }
              accessible={false}
              collapsable={false}
              focusable={true}
              nativeID="animatedComponent"
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "borderColor": "#35823F",
                  "borderRadius": 4,
                  "borderWidth": 2,
                  "opacity": 1,
                  "padding": 16,
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#35823F",
                      "fontSize": 18,
                      "fontWeight": "bold",
                      "textAlign": "center",
                    },
                    false,
                  ]
                }
              >
                Global.Decline
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>,
  <Modal
    hardwareAccelerated={false}
    testID="CredentialOffer.CredentialOnTheWay"
    transparent={true}
    visible={false}
  >
    <RNCSafeAreaView
      style={
        Object {
          "backgroundColor": "#000000",
          "flex": 1,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "flex-end",
            "width": "100%",
          }
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
              "padding": 20,
              "paddingVertical": 28,
            }
          }
        >
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 24,
                },
                undefined,
                Object {
                  "fontFamily": "Material Icons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {},
              ]
            }
          >
            
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "flexGrow": 1,
            "justifyContent": "center",
            "padding": 25,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#FFFFFF",
                "fontSize": 26,
                "fontWeight": "bold",
              },
              Object {
                "fontWeight": "normal",
                "textAlign": "center",
              },
            ]
          }
        >
          CredentialOffer.CredentialOnTheWay
        </Text>
        <
          style={
            Object {
              "marginVertical": 20,
            }
          }
        />
      </View>
      <View
        style={
          Object {
            "marginBottom": 35,
            "marginHorizontal": 20,
          }
        }
      >
        <View
          accessibilityState={
            Object {
              "disabled": false,
            }
          }
          accessible={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "#35823F",
              "borderRadius": 4,
              "opacity": 1,
              "padding": 16,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 18,
                  "fontWeight": "bold",
                  "textAlign": "center",
                },
                false,
              ]
            }
          >
            Global.Cancel
          </Text>
        </View>
      </View>
    </RNCSafeAreaView>
  </Modal>,
  <Modal
    hardwareAccelerated={false}
    testID="CredentialOffer.CredentialAddedToYourWallet"
    transparent={true}
    visible={false}
  >
    <RNCSafeAreaView
      style={
        Object {
          "backgroundColor": "#000000",
          "flex": 1,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "flex-end",
            "width": "100%",
          }
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
              "padding": 20,
              "paddingVertical": 28,
            }
          }
        >
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 24,
                },
                undefined,
                Object {
                  "fontFamily": "Material Icons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {},
              ]
            }
          >
            
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "flexGrow": 1,
            "justifyContent": "center",
            "padding": 25,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#FFFFFF",
                "fontSize": 26,
                "fontWeight": "bold",
              },
              Object {
                "fontWeight": "normal",
                "textAlign": "center",
              },
            ]
          }
        >
          CredentialOffer.CredentialAddedToYourWallet
        </Text>
        <
          style={
            Object {
              "marginVertical": 20,
            }
          }
        />
        <View
          style={
            Object {
              "flexDirection": "row",
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#FFFFFF",
              }
            }
          >
            Your
          </Text>
          <Text>
             
          </Text>
          <Text
            style={
              Object {
                "color": "#FFFFFF",
                "textDecorationLine": "underline",
              }
            }
          >
            activity log
          </Text>
          <Text>
             
          </Text>
          <Text
            style={
              Object {
                "color": "#FFFFFF",
              }
            }
          >
            has been updated
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "marginBottom": 35,
            "marginHorizontal": 20,
          }
        }
      >
        <View
          accessibilityState={
            Object {
              "disabled": false,
            }
          }
          accessible={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "#35823F",
              "borderRadius": 4,
              "opacity": 1,
              "padding": 16,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 18,
                  "fontWeight": "bold",
                  "textAlign": "center",
                },
                false,
              ]
            }
          >
            Global.Done
          </Text>
        </View>
      </View>
    </RNCSafeAreaView>
  </Modal>,
  <Modal
    hardwareAccelerated={false}
    testID="CredentialOffer.CredentialDeclined"
    transparent={true}
    visible={false}
  >
    <RNCSafeAreaView
      style={
        Object {
          "backgroundColor": "#000000",
          "flex": 1,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "flex-end",
            "width": "100%",
          }
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
              "padding": 20,
              "paddingVertical": 28,
            }
          }
        >
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 24,
                },
                undefined,
                Object {
                  "fontFamily": "Material Icons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {},
              ]
            }
          >
            
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "flexGrow": 1,
            "justifyContent": "center",
            "padding": 25,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#FFFFFF",
                "fontSize": 26,
                "fontWeight": "bold",
              },
              Object {
                "fontWeight": "normal",
                "textAlign": "center",
              },
            ]
          }
        >
          CredentialOffer.CredentialDeclined
        </Text>
        <
          style={
            Object {
              "marginVertical": 20,
            }
          }
        />
        <View
          style={
            Object {
              "flexDirection": "row",
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#FFFFFF",
              }
            }
          >
            Your
          </Text>
          <Text>
             
          </Text>
          <Text
            style={
              Object {
                "color": "#FFFFFF",
                "textDecorationLine": "underline",
              }
            }
          >
            activity log
          </Text>
          <Text>
             
          </Text>
          <Text
            style={
              Object {
                "color": "#FFFFFF",
              }
            }
          >
            has been updated
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "marginBottom": 35,
            "marginHorizontal": 20,
          }
        }
      >
        <View
          accessibilityState={
            Object {
              "disabled": false,
            }
          }
          accessible={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "#35823F",
              "borderRadius": 4,
              "opacity": 1,
              "padding": 16,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 18,
                  "fontWeight": "bold",
                  "textAlign": "center",
                },
                false,
              ]
            }
          >
            Global.Done
          </Text>
        </View>
      </View>
    </RNCSafeAreaView>
  </Modal>,
]
`;

exports[`displays a credential offer screen shows declined conformation alert 1`] = `
Array [
  <RCTScrollView
    ListFooterComponent={[Function]}
    ListHeaderComponent={[Function]}
    data={
      Array [
        Object {
          "mime-type": "text/plain",
          "name": "name",
          "value": "Alice Smith",
        },
        Object {
          "mime-type": "text/plain",
          "name": "date",
          "value": "2018-05-28",
        },
        Object {
          "mime-type": "text/plain",
          "name": "degree",
          "value": "Maths",
        },
        Object {
          "mime-type": "text/plain",
          "name": "birthdate_dateint",
          "value": "19980222",
        },
        Object {
          "mime-type": "text/plain",
          "name": "timestamp",
          "value": "1645559742",
        },
      ]
    }
    getItem={[Function]}
    getItemCount={[Function]}
    keyExtractor={[Function]}
    onContentSizeChange={[Function]}
    onLayout={[Function]}
    onMomentumScrollBegin={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
    viewabilityConfigCallbackPairs={Array []}
  >
    <View>
      <View
        onLayout={[Function]}
      >
        <View
          style={
            Object {
              "backgroundColor": "#000000",
            }
          }
        >
          <View
            style={
              Object {
                "paddingHorizontal": 25,
                "paddingVertical": 16,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#FFFFFF",
                  "flexShrink": 1,
                  "fontSize": 18,
                  "fontWeight": "normal",
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#FFFFFF",
                      "fontSize": 20,
                      "fontWeight": "bold",
                    },
                    undefined,
                  ]
                }
              >
                faber.agent
              </Text>
               
              CredentialOffer.IsOfferingYouACredential
            </Text>
          </View>
          <View
            style={
              Object {
                "marginBottom": 16,
                "marginHorizontal": 15,
              }
            }
          >
            <View
              accessible={true}
              collapsable={false}
              focusable={true}
              nativeID="animatedComponent"
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "backgroundColor": "#313132",
                  "borderRadius": 15,
                  "justifyContent": "center",
                  "minHeight": 125,
                  "opacity": 1,
                  "padding": 10,
                }
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                  }
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "borderColor": "#FFFFFF",
                        "borderRadius": 32,
                        "borderWidth": 3,
                        "height": 64,
                        "justifyContent": "center",
                        "margin": 12,
                        "width": 64,
                      },
                      Object {
                        "borderColor": "#15C477",
                      },
                    ]
                  }
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#FFFFFF",
                          "fontSize": 20,
                          "fontWeight": "bold",
                        },
                        Object {
                          "color": "#FFFFFF",
                          "fontSize": 32,
                          "fontWeight": "normal",
                        },
                      ]
                    }
                  >
                    C
                  </Text>
                </View>
                <View
                  style={
                    Object {
                      "flexShrink": 1,
                    }
                  }
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#FFFFFF",
                          "fontSize": 20,
                          "fontWeight": "bold",
                        },
                        undefined,
                      ]
                    }
                  >
                    Credential
                  </Text>
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#FFFFFF",
                        },
                        undefined,
                      ]
                    }
                  >
                    CredentialDetails.Version
                    : 
                    
                  </Text>
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#FFFFFF",
                        },
                        undefined,
                      ]
                    }
                  >
                    CredentialDetails.Issued
                    :
                     
                    Feb 22, 2022 (11:55 AM)
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          style={
            Object {
              "backgroundColor": "#313132",
              "paddingHorizontal": 25,
              "paddingTop": 16,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#FFFFFF",
                "fontSize": 14,
                "fontWeight": "bold",
              }
            }
          >
            Name
          </Text>
          <View
            style={
              Object {
                "flexDirection": "row",
                "justifyContent": "space-between",
                "paddingTop": 10,
              }
            }
          >
            <View
              style={
                Object {
                  "minHeight": 18,
                  "paddingVertical": 4,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#FFFFFF",
                    "fontSize": 18,
                    "fontWeight": "normal",
                  }
                }
              >
                Alice Smith
              </Text>
            </View>
          </View>
          <View
            style={
              Object {
                "borderBottomColor": "#000000",
                "borderBottomWidth": 2,
                "paddingTop": 12,
              }
            }
          />
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          style={
            Object {
              "backgroundColor": "#313132",
              "paddingHorizontal": 25,
              "paddingTop": 16,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#FFFFFF",
                "fontSize": 14,
                "fontWeight": "bold",
              }
            }
          >
            Date
          </Text>
          <View
            style={
              Object {
                "flexDirection": "row",
                "justifyContent": "space-between",
                "paddingTop": 10,
              }
            }
          >
            <View
              style={
                Object {
                  "minHeight": 18,
                  "paddingVertical": 4,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#FFFFFF",
                    "fontSize": 18,
                    "fontWeight": "normal",
                  }
                }
              >
                2018-05-28
              </Text>
            </View>
          </View>
          <View
            style={
              Object {
                "borderBottomColor": "#000000",
                "borderBottomWidth": 2,
                "paddingTop": 12,
              }
            }
          />
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          style={
            Object {
              "backgroundColor": "#313132",
              "paddingHorizontal": 25,
              "paddingTop": 16,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#FFFFFF",
                "fontSize": 14,
                "fontWeight": "bold",
              }
            }
          >
            Degree
          </Text>
          <View
            style={
              Object {
                "flexDirection": "row",
                "justifyContent": "space-between",
                "paddingTop": 10,
              }
            }
          >
            <View
              style={
                Object {
                  "minHeight": 18,
                  "paddingVertical": 4,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#FFFFFF",
                    "fontSize": 18,
                    "fontWeight": "normal",
                  }
                }
              >
                Maths
              </Text>
            </View>
          </View>
          <View
            style={
              Object {
                "borderBottomColor": "#000000",
                "borderBottomWidth": 2,
                "paddingTop": 12,
              }
            }
          />
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          style={
            Object {
              "backgroundColor": "#313132",
              "paddingHorizontal": 25,
              "paddingTop": 16,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#FFFFFF",
                "fontSize": 14,
                "fontWeight": "bold",
              }
            }
          >
            Birthdate Dateint
          </Text>
          <View
            style={
              Object {
                "flexDirection": "row",
                "justifyContent": "space-between",
                "paddingTop": 10,
              }
            }
          >
            <View
              style={
                Object {
                  "minHeight": 18,
                  "paddingVertical": 4,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#FFFFFF",
                    "fontSize": 18,
                    "fontWeight": "normal",
                  }
                }
              >
                19980222
              </Text>
            </View>
          </View>
          <View
            style={
              Object {
                "borderBottomColor": "#000000",
                "borderBottomWidth": 2,
                "paddingTop": 12,
              }
            }
          />
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          style={
            Object {
              "backgroundColor": "#313132",
              "paddingHorizontal": 25,
              "paddingTop": 16,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#FFFFFF",
                "fontSize": 14,
                "fontWeight": "bold",
              }
            }
          >
            Timestamp
          </Text>
          <View
            style={
              Object {
                "flexDirection": "row",
                "justifyContent": "space-between",
                "paddingTop": 10,
              }
            }
          >
            <View
              style={
                Object {
                  "minHeight": 18,
                  "paddingVertical": 4,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#FFFFFF",
                    "fontSize": 18,
                    "fontWeight": "normal",
                  }
                }
              >
                1645559742
              </Text>
            </View>
          </View>
          <View
            style={
              Object {
                "borderBottomColor": "#000000",
                "borderBottomWidth": 2,
                "paddingTop": 12,
              }
            }
          />
        </View>
      </View>
      <View
        onLayout={[Function]}
      >
        <View
          style={
            Object {
              "backgroundColor": "#313132",
              "height": "100%",
              "paddingHorizontal": 25,
              "paddingVertical": 16,
            }
          }
        >
          <View
            style={
              Object {
                "paddingTop": 10,
              }
            }
          >
            <View
              accessibilityState={
                Object {
                  "disabled": true,
                }
              }
              accessible={false}
              collapsable={false}
              focusable={true}
              nativeID="animatedComponent"
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "backgroundColor": "rgba(53, 130, 63, 0.35)",
                  "borderRadius": 4,
                  "opacity": 1,
                  "padding": 16,
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#FFFFFF",
                      "fontSize": 18,
                      "fontWeight": "bold",
                      "textAlign": "center",
                    },
                    Object {
                      "color": "#FFFFFF",
                      "fontSize": 18,
                      "fontWeight": "bold",
                      "textAlign": "center",
                    },
                  ]
                }
              >
                Global.Accept
              </Text>
            </View>
          </View>
          <View
            style={
              Object {
                "paddingTop": 10,
              }
            }
          >
            <View
              accessibilityState={
                Object {
                  "disabled": true,
                }
              }
              accessible={false}
              collapsable={false}
              focusable={true}
              nativeID="animatedComponent"
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "borderColor": "rgba(53, 130, 63, 0.7)",
                  "borderRadius": 4,
                  "borderWidth": 2,
                  "opacity": 1,
                  "padding": 16,
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#35823F",
                      "fontSize": 18,
                      "fontWeight": "bold",
                      "textAlign": "center",
                    },
                    Object {
                      "color": "rgba(53, 130, 63, 0.7)",
                      "fontSize": 18,
                      "fontWeight": "bold",
                      "textAlign": "center",
                    },
                  ]
                }
              >
                Global.Decline
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>,
  <Modal
    hardwareAccelerated={false}
    testID="CredentialOffer.CredentialOnTheWay"
    transparent={true}
    visible={false}
  >
    <RNCSafeAreaView
      style={
        Object {
          "backgroundColor": "#000000",
          "flex": 1,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "flex-end",
            "width": "100%",
          }
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
              "padding": 20,
              "paddingVertical": 28,
            }
          }
        >
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 24,
                },
                undefined,
                Object {
                  "fontFamily": "Material Icons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {},
              ]
            }
          >
            
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "flexGrow": 1,
            "justifyContent": "center",
            "padding": 25,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#FFFFFF",
                "fontSize": 26,
                "fontWeight": "bold",
              },
              Object {
                "fontWeight": "normal",
                "textAlign": "center",
              },
            ]
          }
        >
          CredentialOffer.CredentialOnTheWay
        </Text>
        <
          style={
            Object {
              "marginVertical": 20,
            }
          }
        />
      </View>
      <View
        style={
          Object {
            "marginBottom": 35,
            "marginHorizontal": 20,
          }
        }
      >
        <View
          accessibilityState={
            Object {
              "disabled": false,
            }
          }
          accessible={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "#35823F",
              "borderRadius": 4,
              "opacity": 1,
              "padding": 16,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 18,
                  "fontWeight": "bold",
                  "textAlign": "center",
                },
                false,
              ]
            }
          >
            Global.Cancel
          </Text>
        </View>
      </View>
    </RNCSafeAreaView>
  </Modal>,
  <Modal
    hardwareAccelerated={false}
    testID="CredentialOffer.CredentialAddedToYourWallet"
    transparent={true}
    visible={false}
  >
    <RNCSafeAreaView
      style={
        Object {
          "backgroundColor": "#000000",
          "flex": 1,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "flex-end",
            "width": "100%",
          }
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
              "padding": 20,
              "paddingVertical": 28,
            }
          }
        >
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 24,
                },
                undefined,
                Object {
                  "fontFamily": "Material Icons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {},
              ]
            }
          >
            
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "flexGrow": 1,
            "justifyContent": "center",
            "padding": 25,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#FFFFFF",
                "fontSize": 26,
                "fontWeight": "bold",
              },
              Object {
                "fontWeight": "normal",
                "textAlign": "center",
              },
            ]
          }
        >
          CredentialOffer.CredentialAddedToYourWallet
        </Text>
        <
          style={
            Object {
              "marginVertical": 20,
            }
          }
        />
        <View
          style={
            Object {
              "flexDirection": "row",
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#FFFFFF",
              }
            }
          >
            Your
          </Text>
          <Text>
             
          </Text>
          <Text
            style={
              Object {
                "color": "#FFFFFF",
                "textDecorationLine": "underline",
              }
            }
          >
            activity log
          </Text>
          <Text>
             
          </Text>
          <Text
            style={
              Object {
                "color": "#FFFFFF",
              }
            }
          >
            has been updated
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "marginBottom": 35,
            "marginHorizontal": 20,
          }
        }
      >
        <View
          accessibilityState={
            Object {
              "disabled": false,
            }
          }
          accessible={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "#35823F",
              "borderRadius": 4,
              "opacity": 1,
              "padding": 16,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 18,
                  "fontWeight": "bold",
                  "textAlign": "center",
                },
                false,
              ]
            }
          >
            Global.Done
          </Text>
        </View>
      </View>
    </RNCSafeAreaView>
  </Modal>,
  <Modal
    hardwareAccelerated={false}
    testID="CredentialOffer.CredentialDeclined"
    transparent={true}
    visible={false}
  >
    <RNCSafeAreaView
      style={
        Object {
          "backgroundColor": "#000000",
          "flex": 1,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "flex-end",
            "width": "100%",
          }
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
              "padding": 20,
              "paddingVertical": 28,
            }
          }
        >
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 24,
                },
                undefined,
                Object {
                  "fontFamily": "Material Icons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {},
              ]
            }
          >
            
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "flexGrow": 1,
            "justifyContent": "center",
            "padding": 25,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#FFFFFF",
                "fontSize": 26,
                "fontWeight": "bold",
              },
              Object {
                "fontWeight": "normal",
                "textAlign": "center",
              },
            ]
          }
        >
          CredentialOffer.CredentialDeclined
        </Text>
        <
          style={
            Object {
              "marginVertical": 20,
            }
          }
        />
        <View
          style={
            Object {
              "flexDirection": "row",
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#FFFFFF",
              }
            }
          >
            Your
          </Text>
          <Text>
             
          </Text>
          <Text
            style={
              Object {
                "color": "#FFFFFF",
                "textDecorationLine": "underline",
              }
            }
          >
            activity log
          </Text>
          <Text>
             
          </Text>
          <Text
            style={
              Object {
                "color": "#FFFFFF",
              }
            }
          >
            has been updated
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "marginBottom": 35,
            "marginHorizontal": 20,
          }
        }
      >
        <View
          accessibilityState={
            Object {
              "disabled": false,
            }
          }
          accessible={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "#35823F",
              "borderRadius": 4,
              "opacity": 1,
              "padding": 16,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 18,
                  "fontWeight": "bold",
                  "textAlign": "center",
                },
                false,
              ]
            }
          >
            Global.Done
          </Text>
        </View>
      </View>
    </RNCSafeAreaView>
  </Modal>,
]
`;
